# VoxelWizard

./: CHANGELOG.md  CMakeLists.txt  README.md
include/: app.hpp  camera.hpp  events.hpp  game_objects.hpp  glfwwindowmanager.hpp  imgui_utility.hpp  iwindowmanager.hpp  renderer.hpp  shader.hpp
resources/shaders/: fshader.glsl  screen_fshader.glsl  screen_vshader.glsl  vshader.glsl
src/: app.cpp  camera.cpp  events.cpp  game_objects.cpp  glfwwindowmanager.cpp  imgui_utility.cpp  main.cpp  renderer.cpp  shader.cpp
